--- a/Client/src/app/core/pages/main-page/main-page.component.scss
+++ b/Client/src/app/core/pages/main-page/main-page.component.scss
@@ -1,4 +1,9 @@
-.menu {
-  display: flex;
-  justify-content: space-between;
+
+
+.main-container {
+  height: 100vh;
+  .menu {
+    display: flex;
+    justify-content: space-between;
+  }
 }
