(Client) (Feature) add about me page

--- a/Client/src/app/core/pages/main-page/main-page.component.html
+++ b/Client/src/app/core/pages/main-page/main-page.component.html
@@ -1,13 +1,17 @@
 <div [ngClass]="(theme$ | async) === 'dark'? 'dark-theme' : 'light-theme'" class="main-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row class="menu">
-      <span>Nod_Dev</span>
+      <span class="mat-display-1">Noderoid.dev</span>
       <button mat-icon-button class="material-symbols-outlined" (click)="onThemeChangeClick() ">
         <mat-icon>{{(theme$ | async) === 'dark' ? 'dark_mode' : 'light_mode'}}</mat-icon>
       </button>
     </mat-toolbar-row>
   </mat-toolbar>
-  <mat-card></mat-card>
-  <h1>Hello</h1>
+  <mat-tab-group mat-stretch-tabs>
+    <mat-tab label="Projects">
+      No projects yet...
+    </mat-tab>
+    <mat-tab label="About"> <app-about></app-about> </mat-tab>
+  </mat-tab-group>
 </div>
 
