--- a/Client/src/scss/dark-theme.scss
+++ b/Client/src/scss/dark-theme.scss
@@ -1,7 +1,7 @@
 @use '@angular/material' as mat;
 
 .dark-theme {
-  $Client-primary: mat.define-palette(mat.$indigo-palette, 600, 700, 900);
+  $Client-primary: mat.define-palette(mat.$indigo-palette, 600, 300, 900);
   $Client-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 
@@ -16,13 +16,9 @@
     )
   ));
 
-  // Common variables
-  $_background: map-get($theme, background);
-  $_foreground: map-get($theme, foreground);
-  $_primary: map-get($theme, primary);
+  @import "theme-common";
   background-color: map-get($_background, background);
   color: map-get($_foreground, text);
-  --primary: map-get($_primary, primary);
 
   @include mat.all-component-themes($theme);
 }
