--- a/Client/src/app/core/pages/main-page/about/about.component.scss
+++ b/Client/src/app/core/pages/main-page/about/about.component.scss
@@ -9,9 +9,9 @@
     display: flex;
     flex-direction: column;
     overflow-x: hidden;
-    padding: 0px 12px;
+    padding: 0 16px;
     .mat-title {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 }
