--- a/Client/src/app/core/pages/main-page/main-page.component.html
+++ b/Client/src/app/core/pages/main-page/main-page.component.html
@@ -9,7 +9,7 @@
   </mat-toolbar>
   <mat-tab-group mat-stretch-tabs>
     <mat-tab label="Projects">
-      No projects yet...
+      <app-projects></app-projects>
     </mat-tab>
     <mat-tab label="About"> <app-about></app-about> </mat-tab>
   </mat-tab-group>
