(Client) (Feature) Add google auth

--- a/Client/src/scss/dark-theme.scss
+++ b/Client/src/scss/dark-theme.scss
@@ -17,9 +17,13 @@
   ));
 
   @import "theme-common";
-  background-color: map-get($_background, background);
-  color: map-get($_foreground, text);
+  &.t {
+    background-color: map-get($_background, background);
+    color: map-get($_foreground, text);
+  }
+
 
   @include mat.all-component-themes($theme);
 }
+
 
