--- a/Client/src/app/core/pages/main-page/main-page.component.html
+++ b/Client/src/app/core/pages/main-page/main-page.component.html
@@ -1,10 +1,13 @@
-<div [ngClass]="(theme$ | async) === 'dark'? 'dark-theme' : 'light-theme'" class="main-container">
+<div [ngClass]="(theme$ | async) === 'dark'? 'dark-theme' : 'light-theme'" class="t main-container">
   <mat-toolbar color="primary">
     <mat-toolbar-row class="menu">
       <span class="mat-display-1">Noderoid.dev</span>
-      <button mat-icon-button class="material-symbols-outlined" (click)="onThemeChangeClick() ">
-        <mat-icon>{{(theme$ | async) === 'dark' ? 'dark_mode' : 'light_mode'}}</mat-icon>
-      </button>
+      <div class="right-side">
+        <app-profile></app-profile>
+        <button mat-icon-button class="material-symbols-outlined" (click)="onThemeChangeClick() ">
+          <mat-icon>{{(theme$ | async) === 'dark' ? 'dark_mode' : 'light_mode'}}</mat-icon>
+        </button>
+      </div>
     </mat-toolbar-row>
   </mat-toolbar>
   <mat-tab-group mat-stretch-tabs>
