--- a/Client/src/app/core/pages/main-page/main-page.component.scss
+++ b/Client/src/app/core/pages/main-page/main-page.component.scss
@@ -6,11 +6,14 @@
     display: flex;
     justify-content: space-between;
     .mat-display-1 {
-      margin: 0px;
+      margin: 0;
     }
     .right-side {
       display: flex;
       align-items: center;
+      app-profile {
+        margin-right: 8px;
+      }
     }
   }
 }
