--- a/Client/src/app/core/components/profile/profile.component.scss
+++ b/Client/src/app/core/components/profile/profile.component.scss
@@ -3,11 +3,12 @@
   flex-direction: column;
   justify-content: center;
   .profile-image {
-    border-radius: 10px;
-    width: 20px;
-    height: 20px;
+    border-radius: 14px;
+    width: 28px;
+    height: 28px;
   }
 }
+
 .unlogged-menu {
   display: flex;
   align-items: center;
@@ -17,4 +18,17 @@
     margin-right: 8px;
   }
 }
+
+.mat-menu-content {
+  padding-top: 0 !important;
+}
+
+.menu-nick {
+  margin: -8px 0 0 0;
+  padding: 0 0 0 4px;
+  height: auto;
+  opacity: 0.6;
+  cursor: default;
+}
+
 
