--- a/Client/src/scss/_theme-common.scss
+++ b/Client/src/scss/_theme-common.scss
@@ -12,3 +12,10 @@ $light: map-get($_primary, lighter);
 .light {
   color: $light;
 }
+
+.m-icon {
+  width: 32px;
+  height: 32px;
+  line-height: 32px !important;
+  font-size: 32px;
+}
