(Client) (Feature) Add BlobBuilderModule

--- a/Client/src/app/core/pages/developer-page/projects/projects.component.html
+++ b/Client/src/app/core/pages/developer-page/projects/projects.component.html
@@ -2,6 +2,6 @@
   <div class="content">
     <app-project-card image="assets/interview-question-project.jpg" description="I have grabbed all question from my or friends previous interview in a single list" title="Interview questions"></app-project-card>
     <app-project-card image="assets/github-repo-project.png" description="Here I describe and share interesting code projects." title="Interested projects"></app-project-card>
-    <app-project-card></app-project-card>
+    <app-project-card image="assets/blog-project.jpg" description="Simple description" title="Blogs" routerLink="/blog"></app-project-card>
   </div>
 </div>
