--- a/Client/src/app/core/pages/main-page/main-page.component.html
+++ b/Client/src/app/core/pages/main-page/main-page.component.html
@@ -10,11 +10,6 @@
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
-  <mat-tab-group mat-stretch-tabs>
-    <mat-tab label="Projects">
-      <app-projects></app-projects>
-    </mat-tab>
-    <mat-tab label="About"> <app-about></app-about> </mat-tab>
-  </mat-tab-group>
+  <router-outlet></router-outlet>
 </div>
 
