(Client) (Refactor) refactor scss themes

--- a/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.html
+++ b/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.html
@@ -1,7 +1,7 @@
 <div>
   <mat-card>
     <div>
-      <button mat-button color="primary" [cdkCopyToClipboard]="sourceControl.value ?? ''">
+      <button mat-button [cdkCopyToClipboard]="sourceControl.value ?? ''">
         <mat-icon>content_copy</mat-icon>
         Copy
       </button>
