--- a/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.scss
+++ b/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.scss
@@ -1,3 +1,10 @@
+.builder-toolbar {
+  div {
+    display: flex;
+    align-items: center;
+  }
+}
+
 .content {
   display: flex;
   width: 100%;
@@ -12,6 +19,7 @@
       width: 100%;
       textarea {
         line-height: 1.5;
+        font-size: 1.1rem;
       }
     }
 
