--- a/Client/src/app/features/blog/pages/blog-builder-page/horizontal-line/horizontal-line.component.html
+++ b/Client/src/app/features/blog/pages/blog-builder-page/horizontal-line/horizontal-line.component.html
@@ -1,6 +1,6 @@
 <div>
   <button mat-button (click)="clicked.emit()">
     <mat-icon>horizontal_rule</mat-icon>
-    Horizontal line
+    <span class="hideable-600">Horizontal line</span>
   </button>
 </div>
