--- a/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.scss
+++ b/Client/src/app/features/blog/pages/blog-builder-page/blog-builder-page.component.scss
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  flex-wrap: wrap-reverse;
   div {
     display: flex;
   }
