--- a/Client/src/app/features/blog/pages/blog-main-page/blog-main-page.component.scss
+++ b/Client/src/app/features/blog/pages/blog-main-page/blog-main-page.component.scss
@@ -1,17 +1,28 @@
 .block-main-page {
   width: 100%;
   display: flex;
-  justify-content: center;
-  &-content {
-    padding: 16px;
-    max-width: 1024px;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20vh;
+
+  .main-title {
+    text-align: center;
+    margin: 16px;
+  }
+
+  .main-subtitle {
+    text-align: center;
+    opacity: 0.8;
+  }
+  .button-section {
     display: flex;
-    flex-direction: column;
-    .mat-display-1 {
-      margin-bottom: 16px;
-    }
-    .search-bar {
-      width: 100%;
+    justify-content: center;
+    flex-wrap: wrap;
+    button {
+      margin: 8px;
+      width: 200px;
+      height: 50px;
     }
   }
+
 }
