--- a/Client/src/scss/themes/_theme-common.scss
+++ b/Client/src/scss/themes/_theme-common.scss
@@ -45,3 +45,23 @@ $p-light: map-get($primary-palette, lighter);
     display: block;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
