--- a/Client/src/scss/themes/dark/_mat-button.scss
+++ b/Client/src/scss/themes/dark/_mat-button.scss
@@ -4,8 +4,12 @@
 @mixin color($theme) {
   $color-config: mat.get-color-config($theme);
   $primary-palette: map.get($color-config, 'primary');
+  $color: mat.get-color-from-palette($primary-palette, A400);
+  .mat-stroked-button.mat-primary {
+    color: $color;
+  }
   .mat-button.mat-primary {
-    color: mat.get-color-from-palette($primary-palette, 400);
+    color: $color
   }
 }
 
