--- a/Client/src/app/features/blog/pages/blog-main-page/blog-main-page.component.html
+++ b/Client/src/app/features/blog/pages/blog-main-page/blog-main-page.component.html
@@ -3,6 +3,6 @@
   <span class="mat-subheading-2 main-subtitle">Easily create and share posts, and build a community in real-time.</span>
   <div class="button-section">
     <button mat-stroked-button color="primary">Check public posts</button>
-    <button mat-flat-button color="primary" routerLink="/blog/my">Open my blog</button>
+    <button mat-flat-button color="primary" routerLink="/blog/my" [disabled]="!(isUserLogged$ | async)">Open my blog</button>
   </div>
 </div>
