--- a/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.html
+++ b/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.html
@@ -60,8 +60,7 @@
           </div>
         </div>
         <div class="post-preview" *ngIf="content != null">
-          <markdown id="md" emoji  lineNumbers lineHighlight [data]="content">
-          </markdown>
+          <md-renderer [content]="content"></md-renderer>
           <div>
             <button mat-stroked-button color="primary" (click)="drawer.toggle()">Open menu</button>
             <button mat-flat-button color="primary" [routerLink]="'/blog/builder/' +  selectedId">Edit</button>
