(Feature) add comments

--- a/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.html
+++ b/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.html
@@ -64,6 +64,7 @@
           <div>
             <button mat-stroked-button color="primary" (click)="drawer.toggle()">Open menu</button>
             <button mat-flat-button color="primary" [routerLink]="'/blog/builder/' +  selectedId">Edit</button>
+            <button mat-flat-button color="primary" [routerLink]="'/blog/view/' +  selectedId">View</button>
           </div>
         </div>
 
