--- a/Client/src/scss/themes/light/light-theme.scss
+++ b/Client/src/scss/themes/light/light-theme.scss
@@ -1,6 +1,7 @@
 @use '../../../../node_modules/@angular/material/index' as mat;
 @use 'mat-card' as card;
 @use 'mat-expansion-panel' as expansion-panel;
+@use 'bottom-menu' as bottom-menu;
 
 .light-theme {
   $Client-primary: mat.define-palette(mat.$indigo-palette, 600, 300, 900);
@@ -23,6 +24,7 @@
 
   @include card.theme($theme);
   @include expansion-panel.theme($theme);
+  @include bottom-menu.theme($theme);
 
   @include mat.all-component-themes($theme);
 }
