--- a/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.scss
+++ b/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.scss
@@ -9,7 +9,7 @@
       width: 64px;
       height: 64px;
       border-radius: 4px;
-      margin-right: 8px;
+      margin: 4px 8px 0px 0px;
     }
     mat-form-field {
       width: 100%;
