--- a/Client/src/app/features/blog/pages/blog-view/blog-view.component.scss
+++ b/Client/src/app/features/blog/pages/blog-view/blog-view.component.scss
@@ -14,6 +14,7 @@
     display: flex;
 
     max-width: 1024px;
+    width: -webkit-fill-available;
     flex-direction: column;
     justify-content: space-between;
     min-height: calc(100vh - 96px);
