--- a/Client/src/app/features/blog/pages/blog-view/comments/comment/comment.component.scss
+++ b/Client/src/app/features/blog/pages/blog-view/comments/comment/comment.component.scss
@@ -1,20 +1,31 @@
 .comment {
   display: flex;
-  .comment-side {
-    img {
-      width: 50px;
-      height: 50px;
-      border-radius: 4px;
+  flex-direction: column;
+
+  .comment-head {
+    display: flex;
+    margin-bottom: 4px;
+
+    &-left {
+      img {
+        width: 32px;
+        height: 32px;
+        border-radius: 4px;
+      }
+      margin-right: 8px;
     }
-    mat-icon {
-      font-size: 50px;
-      width: 50px;
-      height: 50px;
+
+    &-right {
+      display: flex;
+      flex-direction: column;
+      opacity: 0.7;
+      span {
+        line-height: initial;
+      }
     }
-    padding-right: 16px;
   }
 
-  .comment-date {
-    opacity: 0.7;
+  .comment-body {
+    padding-left: 38px;
   }
 }
