--- a/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.html
+++ b/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.html
@@ -1,11 +1,10 @@
 <div class="container">
   <div class="my-comment">
     <img [src]="profilePicture">
-    <mat-form-field>
-      <mat-label>Comment</mat-label>
-      <textarea [formControl]="commentForm" matInput></textarea>
+    <mat-form-field appearance="outline">
+      <textarea [formControl]="commentForm" matInput placeholder="add comment..."></textarea>
     </mat-form-field>
   </div>
-  <button class="send-button" mat-flat-button color="primary" (click)="sendComment.emit(commentForm.value)">Send</button>
-
+  <button class="send-button" mat-flat-button color="primary" (click)="onSend()">Send</button>
 </div>
+
