--- a/Client/src/app/shared/modules/markdown/components/md-renderer.component.html
+++ b/Client/src/app/shared/modules/markdown/components/md-renderer.component.html
@@ -1,2 +1,2 @@
-<markdown emoji lineNumbers lineHighlight [data]="((_data$ | async ) ?? _data)">
+<markdown mermaid emoji [data]="((_data$ | async ) ?? _data)">
 </markdown>
