--- a/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.scss
+++ b/Client/src/app/features/blog/pages/blog-my-posts-page/blog-my-posts-page.component.scss
@@ -31,11 +31,26 @@
 
   .content {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+
+    .view {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      max-width: 1024px;
+      width: -webkit-fill-available;
+      height: 100%;
+
+      md-renderer {
+        padding-top: 12px;
+      }
+    }
+
     span {
       margin-bottom: 0;
     }
