--- a/Client/src/scss/themes/_theme-common.scss
+++ b/Client/src/scss/themes/_theme-common.scss
@@ -28,6 +28,7 @@ $p-light: map-get($primary-palette, lighter);
   height: 32px;
   line-height: 32px !important;
   font-size: 32px;
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 600px) {
