(Feature) add login dialog

--- a/Client/src/app/core/components/profile/profile.component.html
+++ b/Client/src/app/core/components/profile/profile.component.html
@@ -10,7 +10,6 @@
 </mat-menu>
 <mat-menu #unLogged="matMenu">
   <button mat-menu-item (click)="onLogin()" class="unlogged-menu">
-    <img src="assets/google.jpg" class="google-icon">
-    Login via google
+    Login
   </button>
 </mat-menu>
