(Bug) Fix profile image error

--- a/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.html
+++ b/Client/src/app/features/blog/pages/blog-view/comments/my-comment/my-comment.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="my-comment">
-    <img [src]="profilePicture">
+    <img [src]="profilePicture" referrerpolicy="no-referrer">
     <mat-form-field appearance="outline">
       <textarea [formControl]="commentForm" matInput placeholder="add comment..."></textarea>
     </mat-form-field>
