(Feature) add recent posts

--- a/Client/src/app/features/blog/pages/blog-search-page/blog-search-page.component.html
+++ b/Client/src/app/features/blog/pages/blog-search-page/blog-search-page.component.html
@@ -16,5 +16,7 @@
       </div>
       <span class="mat-body-1">{{a.content}}</span>
     </div>
+
+    <app-recent-table *ngIf="!(posts$ | async) || (posts$ | async)?.length === 0"></app-recent-table>
   </div>
 </div>
