(Feature) Add projects page

--- a/Client/src/app/core/pages/developer-page/projects/project-card/project-card.component.scss
+++ b/Client/src/app/core/pages/developer-page/projects/project-card/project-card.component.scss
@@ -2,6 +2,7 @@ mat-card {
   width: min-content;
   margin: 16px;
   cursor: pointer;
+  height: 280px;
   .card-image {
     width: 350px;
     height: 180px;
