--- a/Client/src/app/core/pages/developer-page/projects/projects.component.html
+++ b/Client/src/app/core/pages/developer-page/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="projects-component">
   <div class="content">
     <app-project-card class="disabled" matTooltip="Not available" image="assets/interview-question-project.jpg" description="I have grabbed all question from my or friends previous interview in a single list" title="Interview questions"></app-project-card>
-    <app-project-card class="disabled" matTooltip="Not available" image="assets/github-repo-project.png" description="Here I describe and share interesting code projects." title="Interested projects"></app-project-card>
-    <app-project-card image="assets/blog-project.png" description="Simple description" title="Blogs" routerLink="/blog"></app-project-card>
+    <app-project-card image="assets/github-repo-project.png" description="Here I describe and share interesting code projects." title="Interested projects" routerLink="/projects"></app-project-card>
+    <app-project-card image="assets/blog-project.png" description="Do you want to share something? Go ahead and check it" title="Blogs" routerLink="/blog"></app-project-card>
   </div>
 </div>
